style.css
@import url('https://fonts.googleapis.com/css2?family=Arizonia&family=Fjalla+One&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Potta+One&display=swap');

.open-sans {
    font-family: "Open Sans", serif;
    font-optical-sizing: auto;
    font-weight: 800;
    font-style: normal;
    font-variation-settings:
      "wdth" 100;
  }

  .fjalla-one-regular {
    font-family: "Fjalla One", serif;
    font-weight: 400;
    font-style: normal;
  }

  .frijole-regular {
    font-family: "Frijole", serif;
    font-weight: 400;
    font-style: normal;
  }
  
  .potta-one-regular {
    font-family: "Potta One", serif;
    font-weight: 400;
    font-style: normal;
  }

/* Main Build*/

body {
    box-sizing: content-box;
    margin: auto;
    background-color: #000000;
    overflow-x: hidden;

}


h1 {
    font-family: "Fjalla One", serif;
    font-weight: 400;
    font-style: normal;
}

h3, h2, nav {
    font-family: "Fjalla One", serif;
    font-weight: 400;
    font-style: normal;
    letter-spacing: 0.03cap;
}

p, span {
    font-family: "Open Sans", serif;
    font-optical-sizing: auto;
    font-size: 17px;
    font-weight: 400;
    font-style: normal;
    font-variation-settings:
      "wdth" 100;
}


nav {
    background-color: aquamarine;
    background: rgb(64,96,119);
    background: linear-gradient(90deg, rgba(64,96,119,1) 0%,rgb(55 104 144) 100%);
}

header {
   
    background-color: rgb(171, 249, 245);
    background: rgb(64,96,119);
    background: linear-gradient(90deg, rgba(64,96,119,1) 0%, rgba(84,64,125,1) 100%);
    background-repeat: no-repeat;
    background-position: right center;
   
    
    position: relative;
    overflow: hidden;
    color: white;

}

.center-container{
    max-width: 1440px;
    margin: auto;
}

header .center-container{
    display: flex;
    flex-wrap: nowrap;
    justify-content: left;
    align-items: center;
    padding-left: 100px;
    height: 100vh;
    max-height: 100vh;
}

.construction {
    position: absolute;
    top: 30px;
    left: 30px;
    margin: 20px;
    padding: 20px;
    border: dashed 5px yellow;
    transform: rotate(-2deg);
    background-color: #00000090;
}

.construction .wrapper{
    position: relative;
}

.construction p{

}

.construction img{
    position: absolute;
    width: 50px;
    top: -70px;
    left: -40px;
    transform: rotate(-12deg);
}


header .wrapping{
    transform: rotate(-5deg);
}

header .trapezoid {
    width: calc(100% - 100px);/* Width of the square */
    height: 140px; /* Height of the square */
    background-color: #3498db; /* Background color of the trapezoid */
    background: rgb(123,95,180);
    background: linear-gradient(90deg, rgb(67 91 120) 0%, rgb(97 84 148) 47%, rgba(123, 95, 180, 1) 100%);
    clip-path: polygon(20% 0%, 100% 0%, 100% 100%, 0% 100%);/* Creates the trapezoid shape */
    position: absolute;
    bottom: 0;
    right: 0;
  }

header h1{

    font-family: "Fjalla One", serif;
    font-weight: 600;
    font-style: normal;
    font-size: 40px;
    letter-spacing: 0.03cap;
    color: rgb(255, 243, 75);
    margin-bottom: 10px;
    text-shadow: #FC0 1px 0 10px;
    animation: flicker 2.5s infinite; /* Animation duration and infinite loop */
}

@keyframes flicker {
    0%, 80%, 100% {
        text-shadow: 0 0 5px #FC0, 0 0 10px #FC0; /* Fewer shadows for a subtle glow */
        color: rgb(255, 243, 75); /* Stable bright light */
    }
    82% {
        text-shadow: none; /* Light flickers off briefly */
        color: rgba(255, 243, 75, 0.5); /* Dimmed color */
    }
    85% {
        text-shadow: 0 0 5px #FC0, 0 0 10px #FC0; /* Small flicker */
        color: rgb(255, 243, 75); /* Bright light on */
    }
    87% {
        text-shadow: none; /* Flicker off abruptly */
        color: rgba(255, 243, 75, 0.2); /* Very dim flicker */
    }
    90% {
        text-shadow: 0 0 5px #FC0, 0 0 15px #FC0; /* Slightly brighter light */
        color: rgb(255, 243, 75); /* Full brightness */
    }
}

header h2 {
    margin: 0;
}

svg{
    position: absolute;
    width:100%;
    height:100%;
    top: 0;
    left: 0;
    opacity: 0.3;
  }
  
  line {
    stroke-width: 3px;
  }

 .car {
    position: absolute;    
    top: 200px;
    left: -100px; /* Start off-screen */
    animation: drive 5s ease-in-out forwards, drive2 10s 5s ease-in-out infinite;
    z-index: 4;
    
  }
  
  @keyframes drive {
    0% {
      left: -100px;
    }
    100% {
      left: 42%;
    }
  }

  @keyframes drive2{
    0% {
        left: 42%;
    }

    20%{
        left: 47%;
    }

    30%{
        left: 37%;
    }

    50% {
        left: 39%;
    }

    70%{
        left: 47%;
    }

    100%{
        left: 42%;
    }
  }

.car img{
   animation: wobble .5s linear infinite; 
   transform: rotate(-2deg) translateX(80%) translateY(100%);
   position: absolute; 
}

@keyframes frameAnimation {
    0% { background-image: url('animation/frame0000.png'); }
    9% { background-image: url('animation/frame0001.png'); }
    18% { background-image: url('animation/frame0002.png'); }
    27% { background-image: url('animation/frame0003.png'); }
    36% { background-image: url('animation/frame0004.png'); }
    45% { background-image: url('animation/frame0005.png'); }
    54% { background-image: url('animation/frame0006.png'); }
    63% { background-image: url('animation/frame0007.png'); }
    72% { background-image: url('animation/frame0008.png'); }
    81% { background-image: url('animation/frame0009.png'); }
    90% { background-image: url('animation/frame0010.png'); }
    100% { background-image: url('animation/frame0011.png'); }
}

.animation-container {
    width: 1013px; /* set to the width of your PNGs */
    aspect-ratio: 1013/625;
    background-size: cover;
    background-image: url('animation/frame0000.png');
    /* animation: frameAnimation 1.5s steps(1) infinite; */

}

.animation-container.animated {
    animation: frameAnimation 1.5s steps(1) infinite;
}
/* ... */

